add monitor config interface
